fix email sending and more stuff

--- a/management/templates/management/mails/enter_new_appointments.j2
+++ b/management/templates/management/mails/enter_new_appointments.j2
@@ -2,7 +2,7 @@ Hallo Vorstand,
 
 Das Sprechstundensystem braucht neue Termine, bitte legt neue Termine an.
 
-Anzulegen hier: {% url "management:create_appointments" %}
+Anzulegen hier: https://sprechstunden.stustanet.de{% url "management:create_appointments" %}
 
 Viel Vergnügen!
 
