--- a/management/templates/management/mails/understaffed.j2
+++ b/management/templates/management/mails/understaffed.j2
@@ -1,11 +1,11 @@
 Hallo zusammen,
 {% if appointment.admins.all.count == 0 %}
 
-die Sprechstunde morgen ({{ appointment.start_time }}) ist noch unbesetzt. Es wäre schön, wenn sich noch paar Leute finden würden, um die Sprechstunde zu übernehmen.
+die Sprechstunde morgen ({{ appointment.start_time }} - {{ appointment.end_time|date:"H:i" }}) ist noch unbesetzt. Es wäre schön, wenn sich noch paar Leute finden würden, um die Sprechstunde zu übernehmen.
 
 {% else %}
 
-in der Sprechstunde morgen ({{ appointment.start_time }}) ist noch ein Platz frei. Es wäre schön, wenn sich noch jemand dafür findet.
+in der Sprechstunde morgen ({{ appointment.start_time }} - {{ appointment.end_time|date:"H:i" }}) ist noch ein Platz frei. Es wäre schön, wenn sich noch jemand dafür findet.
 
 {% endif %}
 Grüße,
