Month overflow issues on end of year fixed (#4) Deteletion of Appointments (#5)

--- a/management/templates/management/plan.html
+++ b/management/templates/management/plan.html
@@ -1,7 +1,7 @@
 {% extends "management/base.html" %}
 
 {% block content %}
-  <h2>Sprechstundenplan <small>für {{ from_date|date:"F" }} - {{ to_date|date:"F" }}</small></h2>
+  <h2>Sprechstundenplan <small>für {{ from_date|date:"F Y" }} - {{ to_date|date:"F Y" }}</small></h2>
 
   <p>Unsere Sprechstunden finden während der Vorlesungszeit an der TUM, LMU und FH jeweils am Montag und Donnerstag
     statt; sonst nur Donnerstags. Wenn du bei einer Sprechstunde helfen willst, schreibe einfach eine E-Mail an den
