--- a/management/templates/management/edit_appointment.html
+++ b/management/templates/management/edit_appointment.html
@@ -53,7 +53,7 @@
     <div class="row justify-content-end">
       <div class="col-sm-9">
         <button type="submit" class="btn btn-success">Speichern</button>
-        <button class="btn btn-danger">Löschen</button>
+        <a class="btn btn-danger" href="{% url "management:delete_appointment" appointment.pk  %}">Löschen</a>
         <a class="btn btn-outline-dark" href="{% url "management:index" %}">Abbrechen</a>
       </div>
     </div>
