--- a/management/templates/management/statistics.html
+++ b/management/templates/management/statistics.html
@@ -20,8 +20,10 @@
     <table class="table table-striped table-hover">
       <thead>
       <tr>
-        <th class="col-sm-8">Name</th>
-        <th class="col-sm-4">Anzahl an Sprechstunden</th>
+        <th class="col-sm-4">Name</th>
+        <th class="col-sm-2"># Sprechstunden (SS)</th>
+        <th class="col-sm-2"># Honorarsemester (HS)</th>
+        <th class="col-sm-2"># SS seit letztem HS</th>
       </tr>
       </thead>
       <tbody>
@@ -32,6 +34,8 @@
             <a href="mailto:{{ admin.email }}"><i class="fa fa-envelope"></i></a>
           </td>
           <td>{{ admin.num_appointments }}</td>
+          <td>{{ admin.h_semester_count }}</td>
+          <td>{{ admin.ss_since_last_h_semester }}</td>
         </tr>
       {% endfor %}
       </tbody>
