--- a/management/templates/management/manage_admins.html
+++ b/management/templates/management/manage_admins.html
@@ -1,4 +1,5 @@
 {% extends "management/base.html" %}
+{% load static %}
 
 {% block content %}
   <h3>Admins verwalten<a class="btn btn-success btn-sm float-right" href="{% url "management:create_admin" %}">hinzufügen</a></h3>
@@ -20,11 +21,22 @@
       <td class="text-right">
         <div class="btn-group">
           <a class="btn btn-sm btn-outline-info" href="{% url "management:edit_admin" admin.pk %}"><i class="fa fa-pencil-alt"></i></a>
-          <button class="btn btn-sm btn-outline-danger" name="delete"><i class="fa fa-trash"></i></button>
+          <a class="btn btn-sm btn-outline-danger delete" href="{% url "management:delete_admin" admin.pk  %}"><i class="fa fa-trash"></i></a>
         </div>
       </td>
     </tr>
   {% endfor %}
   </tbody>
   </table>
+{% endblock %}
+{% block footer_scripts %}
+  <script src="{% static "management/typeahead.js/typeahead.bundle.min.js" %}"
+          type="text/javascript"></script>
+  <script type="text/javascript">
+      $(function () {
+          $('.delete').click(function () {
+              return window.confirm("Soll der Admin wirklich gelöscht werden?");
+          });
+      });
+  </script>
 {% endblock %}
