--- a/management/templates/management/edit_admin.html
+++ b/management/templates/management/edit_admin.html
@@ -49,7 +49,7 @@
       <div class="form-group row">
         <label class="col-sm-3 col-form-label">Honorarsemester</label>
         <div class="col-sm-9 hsems">
-          {% for hs in admin.h_semesters.all %}
+          {% for hs in hsems %}
             <div class="row mb-3">
               <div class="col-sm-11">
                 <input id="id_start_date" class="form-control" type="date" name="date"
