--- a/management/templates/management/manage_admins.html
+++ b/management/templates/management/manage_admins.html
@@ -8,7 +8,9 @@
   <tr>
     <th class="col-sm-2">Nachname</th>
     <th class="col-sm-2">Vorname</th>
-    <th class="col-sm-6">E-Mail</th>
+    <th class="col-sm-4">E-Mail</th>
+    <th class="col-sm-1"># SS</th>
+    <th class="col-sm-1"># HS</th>
     <th class="col-sm-2"></th>
   </tr>
   </thead>
@@ -18,6 +20,8 @@
     <td>{{ admin.last_name }}</td>
       <td>{{ admin.first_name }}</td>
       <td><a href="mailto:{{ admin.email }}">{{ admin.email }}</a></td>
+      <td>{{ admin.appointment_count }}</td>
+      <td>{{ admin.h_semester_count }}</td>
       <td class="text-right">
         <div class="btn-group">
           <a class="btn btn-sm btn-outline-info" href="{% url "management:edit_admin" admin.pk %}"><i class="fa fa-pencil-alt"></i></a>
