--- a/management/templates/management/plan.html
+++ b/management/templates/management/plan.html
@@ -3,8 +3,7 @@
 {% block content %}
   <h2>Sprechstundenplan <small>für {{ from_date|date:"F Y" }} - {{ to_date|date:"F Y" }}</small></h2>
 
-  <p>Unsere Sprechstunden finden während der Vorlesungszeit an der TUM, LMU und FH jeweils am Montag und Donnerstag
-    statt; sonst nur Donnerstags. Wenn du bei einer Sprechstunde helfen willst, schreibe einfach eine E-Mail an den
+  <p>Unsere Sprechstunden finden in der Regel Donnerstags statt. Wenn du bei einer Sprechstunde helfen willst, schreibe einfach eine E-Mail an den
     Vorstand! </p>
 
   {% for month in plan %}
