--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -56,8 +56,11 @@
                 <a class="dropdown-item" href="{% url 'management:create_appointments' %}">Neue Sprechstunden</a>
                 <a class="dropdown-item" href="{% url 'management:statistics' %}">Statistik</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url "management:logout" %}"><i class="fa fa-sign-out-alt"></i>
-                  Abmelden</a>
+                <form action="{% url "management:logout" %}" method="post">
+                  {% csrf_token %}
+                  <button class="dropdown-item" href=""><i class="fa fa-sign-out-alt"></i>
+                    Abmelden</button>
+                </form>
               </div>
             </li>
           {% else %}
